# openstack-ansible-os_octavia

./: .gitreview  CONTRIBUTING.rst  README.rst  bindep.txt  run_tests.sh  setup.cfg  test-requirements.txt  tox.ini
defaults/: main.yml
doc/source/: conf.py  configure-octavia.rst  index.rst  troubleshoot-octavia.rst
examples/: playbook.yml
handlers/: main.yml
meta/: main.yml
releasenotes/notes/: custom_eventstreamer_queue_url-a1dcd1f6769816c5.yaml  octavia-service-setup-host-d57533fdea394394.yaml
releasenotes/source/: conf.py  index.rst
tasks/: main.yml  octavia_amp_image.yml  octavia_certs.yml  octavia_certs_distribute.yml  octavia_certs_install.yml  octavia_db_setup.yml  octavia_db_sync.yml  octavia_flavor_create.yml  octavia_init_common.yml  octavia_init_systemd.yml  octavia_install.yml  octavia_install_apt.yml  octavia_install_yum.yml  octavia_keypair.yml  octavia_mgmt_network.yml  octavia_policy.yml  octavia_post_install.yml  octavia_pre_install.yml  octavia_resources.yml  octavia_security_group.yml  octavia_service_add.yml  octavia_uwsgi.yml
templates/: octavia-systemd-init.j2  octavia-systemd-tmpfiles.j2  octavia-uwsgi.ini.j2  octavia.conf.j2  openssl.conf.j2  policy.json.j2
tests/: ansible-role-requirements.yml  inventory  os_octavia-overrides.yml  test-configure-octavia.yml  test-install-octavia.yml  test-octavia.yml  test.yml  tests-repo-clone.sh
vars/: debian.yml  distro_install.yml  main.yml  redhat-7.yml  redhat.yml  source_install.yml  suse.yml  ubuntu-16.04.yml  ubuntu.yml
zuul.d/: jobs.yaml  project.yaml
(+4 files in other folders)
