[metadata]
name = openstack-ansible-os_octavia
summary = os_octavia for OpenStack Ansible
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/openstack-ansible-os_octavia/latest/
classifier =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
